Página para comentários

--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -47,6 +47,9 @@ body {
     cursor: pointer;
   }
   
+  main { background-image: url(../imag/vas.png);
+  }
+
   #cor-fundo {
     padding: 0px 15px;
   }
