Página para comentários

--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -41,15 +41,13 @@ body {
   
   #cor-texto {
     padding: 0px 15px;
+    
   }
   
   #cor-texto:hover{
     cursor: pointer;
   }
   
-  main { background-image: url(../imag/vas.png);
-  }
-
   #cor-fundo {
     padding: 0px 15px;
   }
@@ -61,13 +59,16 @@ body {
   button {
     width: 100px;
     padding: 10px 0px;
-    border: 2px solid #000;
+    border: 2px solid rgb(235, 8, 8);
     border-radius: 5px;
     margin-bottom: 20px;
   }
+
+  main { background-image: url(../imag/vas.png);
+  }
   
   button:hover {
-    background-color: #ddd;
+    background-color: rgb(9, 236, 65);
     cursor: pointer;
   }
 
@@ -84,7 +85,7 @@ body {
   }
   
   .usuario {
-    border: 1px solid #222;
+    border: 1px solid #fff;
     padding: 20px 40px;
   }
   
